--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 # pycocotools requires numpy 1.17 https://github.com/cocodataset/cocoapi/issues/356
 numpy == 1.17
 opencv-python >= 4.1
-torch >= 1.5
+torch 
+torchvision
 matplotlib
 pycocotools
 tqdm
